projects/static/portal/axis-portal-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: axis-system
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
