projects/static/portal/axis-portal-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: axis-portal-ingress
  namespace: axis-system
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: "axis-dns-issuer"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portal.armandogil.es`)
      kind: Rule
      middlewares:
        - name: axis-vpn-only
          namespace: traefik-system
      services:
        - name: axis-portal-svc
          port: 80
  tls:
    secretName: portal-tls-cert
